appId: com.guigiani.iBooster
onFlowComplete:
  - stopApp
---
- launchApp
- assertVisible: 'Device Health Score'
- assertVisible: 'Batt.*'
- tapOn: 'Batt.*'
- scrollUntilVisible:
    element: 'Battery Health Summary'
- scrollUntilVisible:
    element: 'Notification Settings'
- scrollUntilVisible:
    element: 'Battery Tips'
- scroll
- assertVisible: '.*Low Power Mode.*'
- stopApp: com.guigiani.iBooster
