appId: com.guigiani.iBooster
---
- launchApp
- assertVisible: 'Device Health Score'
- scrollUntilVisible:
    element: 'Battery'
- assertVisible: 'Battery'
- tapOn: 'Battery'
- assertVisible: 'Battery'
- assertVisible: '%'
- tapOn:
    id: 'back-button'
    optional: true
- scrollUntilVisible:
    element: 'Storage'
- assertVisible: 'Storage'
- tapOn: 'Storage'
- assertVisible: 'Storage Analysis'
- scroll
- stopApp: com.guigiani.iBooster
