appId: com.guigiani.iBooster
---
- launchApp
- assertVisible: 'Device Health Score'
- scrollUntilVisible:
    element: 'Network'
- assertVisible: 'Network'
- tapOn: 'Network'
- assertVisible: 'Network Status'
- assertVisible: 'Connection'
- assertVisible: 'Performance'
- scroll
- assertVisible: 'Tips'
- stopApp: com.guigiani.iBooster
