appId: com.guigiani.iBooster
---
- launchApp
- assertVisible: 'Device Health Score'
- scrollUntilVisible:
    element: 'View Tutorial'
- tapOn:
    text: 'View Tutorial'
    enabled: true
- assertVisible:
    text: 'Welcome to iBooster'
    enabled: true
- tapOn:
    text: 'Next'
    enabled: true
- assertVisible:
    text: 'Extend Battery Life'
    enabled: true
- tapOn:
    text: 'Next'
    enabled: true
- assertVisible:
    text: 'Free Up Storage'
    enabled: true
- tapOn:
    text: 'Next'
    enabled: true
- assertVisible:
    text: 'Stay Optimized'
    enabled: true
- tapOn:
    text: 'Get Started'
    enabled: true
- stopApp: com.guigiani.iBooster
