appId: com.guigiani.iBooster
---
- launchApp
- assertVisible: 'Device Health Score'
- scrollUntilVisible:
    element: 'Storage'
- assertVisible: 'Storage'
- tapOn: 'Storage'
- assertVisible: 'Storage Analysis'
- assertVisible: 'Media Library'
- assertVisible: 'GB'
- scroll
- assertVisible: 'Cleanup'
- stopApp: com.guigiani.iBooster
