appId: com.guigiani.iBooster
onFlowComplete:
  - stopApp
---
- launchApp
- assertVisible: 'Device Health Score'
- assertVisible: 'Status Overview'
- assertVisible: 'Batt.*'
- assertVisible: 'Stor.*'
- assertVisible: 'Net.*'
- tapOn: 'Batt.*'
- assertVisible: '.*Battery History.*'
